testsuite/resolution/compile-fail/module/child.verona
// Copyright (c) Contributers to Project Verona. All rights reserved.
// Licensed under the MIT License.

class A {
  m(x: T) {}
}
